--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ services:
   - docker
 before_install:
   - sudo service docker restart ; sleep 10
+  - jdk_switcher use oraclejdk8
   - npm install -g yo
   - npm install -g bower
 install:
