--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ script:
   - gulp -v
   - grunt --version
   - echo "hello jhipster !"
-  - cd app-cassandra && yo jhipster --force
+  - cd app-cassandra && yo jhipster --force --no-insight
