--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,8 @@ script:
   - echo "hello jhipster !"
   - cd sample-app && yo jhipster --force --no-insight
   - ls -l
-  - mvn spring-boot:run
+  - mvn spring-boot:run &
   - ps ux
+  - ps ux | grep spring-boot
+  - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
+  - fuser -k 8080/tcp
