--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ script:
   - cd sample-app && yo jhipster --force --no-insight
   - ls -l
   - mvn spring-boot:run &
+  - sleep 60
   - ps ux
   - ps ux | grep spring-boot
   - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
