--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
   - npm install -g grunt-cli
   - npm install -g gulp
   - npm install -g generator-jhipster@2.21.0
-script:
+  - docker pull mongo
   - java -version
   - git --version
   - yo --version
@@ -21,12 +21,23 @@ script:
   - grunt --version
   - gulp -v
   - grunt --version
-  - echo "hello jhipster !"
+script:
+  #------------------
+  #--- sample-app ---
+  #------------------
   - cd sample-app && yo jhipster --force --no-insight
-  - ls -l
   - mvn spring-boot:run &
   - sleep 120
-  - ps ux
-  - ps ux | grep spring-boot
   - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
   - fuser -k 8080/tcp
+  - cd ..
+  #--------------------------
+  #--- sample-app-mongodb ---
+  #--------------------------
+  - docker run -d -p 27017:27017 mongo
+  - cd sample-app-mongodb && yo jhipster --force --no-insight
+  - mvn spring-boot:run &
+  - sleep 120
+  - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
+  - fuser -k 8080/tcp
+  - cd ..
