--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ script:
   - sleep 120
   - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
   - fuser -k 8080/tcp
+  - sleep 10
   - cd ..
   #--------------------------
   #--- sample-app-mongodb ---
@@ -40,4 +41,5 @@ script:
   - sleep 120
   - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
   - fuser -k 8080/tcp
+  - sleep 10
   - cd ..
