--- a/sample-app-mysql/.yo-rc.json
+++ b/sample-app-mysql/.yo-rc.json
@@ -1,21 +1,21 @@
 {
   "generator-jhipster": {
-    "baseName": "cass",
+    "baseName": "sampleMySQL",
     "packageName": "com.mycompany.myapp",
     "packageFolder": "com/mycompany/myapp",
     "authenticationType": "session",
-    "hibernateCache": "no",
+    "hibernateCache": "ehcache",
     "clusteredHttpSession": "no",
     "websocket": "no",
-    "databaseType": "cassandra",
-    "devDatabaseType": "cassandra",
-    "prodDatabaseType": "cassandra",
+    "databaseType": "sql",
+    "devDatabaseType": "mysql",
+    "prodDatabaseType": "mysql",
     "searchEngine": "no",
     "useSass": false,
     "buildTool": "maven",
     "frontendBuilder": "grunt",
     "javaVersion": "8",
     "enableTranslation": true,
-    "rememberMeKey": "2bff18dae01e88f4dacc652461fb09269c843059"
+    "rememberMeKey": "1056c592fac7e261bb6b42c03a9a79947bb7d519"
   }
 }
