--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,13 @@ before_install:
   - sudo service docker restart ; sleep 10
   - jdk_switcher use oraclejdk8
 install:
-  - npm install -g yo
-  - npm install -g bower
+  # - npm install -g yo
+  # - npm install -g bower
   # - npm install -g grunt-cli
   # - npm install -g gulp
   # - npm install -g generator-jhipster@2.21.0
   - docker pull jdubois/jhipster-docker
-  - docker run -d --name=app --user=jhipster -w /jhipster -v `pwd`/sample-app/:/jhipster/ jdubois/jhipster-docker
+  - docker run -d -p 8081:8080 --name=app --user=jhipster -w /jhipster -v `pwd`/sample-app/:/jhipster/ jdubois/jhipster-docker
   - sleep 5
   - docker ps -a
   - docker exec --user=jhipster -it app ls -l /jhipster
