--- a/.travis.yml
+++ b/.travis.yml
@@ -42,16 +42,17 @@ install:
   # - ls -l `pwd`/sample-app/
   # - ls -l `pwd`/sample-app-mysql/
 script:
-  - docker run -u jhipster --name=app -w /jhipster -v `pwd`/sample-app/:/home/jhipster/app/ jdubois/jhipster-docker echo n|yo jhipster --no-insight
+  - docker run -u jhipster --name=app -w /home/jhipster/ -v `pwd`/sample-app/:/home/jhipster/ jdubois/jhipster-docker yo jhipster --inforce --no-insight
   - docker logs app
   #------------------
   #--- sample-app ---
   #------------------
   - cd `pwd`/sample-app/
-  - mvn spring-boot:run &
-  - sleep 120
-  - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
-  - fuser -k 8080/tcp
+  - ls -l
+  # - mvn spring-boot:run &
+  # - sleep 120
+  # - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
+  # - fuser -k 8080/tcp
   #------------------------
   #--- sample-app-mysql ---
   #------------------------
