--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ install:
   # - npm install -g gulp
   # - npm install -g generator-jhipster@2.21.0
   - docker version
-  - docker pull jdubois/jhipster-docker
-
+  # - docker pull jdubois/jhipster-docker
+  - docker pull ubuntu
   # - sleep 5
   - docker ps -a
   # - docker exec --user=jhipster -it app ls -l
@@ -42,11 +42,12 @@ install:
   # - ls -l `pwd`/sample-app/
   # - ls -l `pwd`/sample-app-mysql/
 script:
-  - docker run -d --name=app -v `pwd`/sample-app/:/home/jhipster/ jdubois/jhipster-docker
+  # - docker run -d --name=app -v `pwd`/sample-app/:/home/jhipster/ jdubois/jhipster-docker
+  - docker run -d --name=app ubuntu
   - docker ps
-  - docker exec -it app ls /home/jhipster
+  - docker exec -it app ls /
   - docker ps
-  - docker exec -it app yo jhipster --inforce --no-insight
+  # - docker exec -it app yo jhipster --inforce --no-insight
   - docker logs app
   #------------------
   #--- sample-app ---
