--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,11 @@ before_install:
 install:
   - docker version
   # - docker pull jdubois/jhipster-docker
-  # - docker build -t pgr/jhipster-docker .
-  # - docker run -d -w /home/jhipster/sample-app/ -v $TRAVIS_BUILD_DIR/sample-app/:/home/jhipster/sample-app/ --name=jhipster pgr/jhipster-docker yo jhipster --inforce --no-insight ; sleep 120
+  - docker build -t pgr/jhipster-docker .
+  - docker run -d -w /home/jhipster/sample-app/ -v $TRAVIS_BUILD_DIR/sample-app/:/home/jhipster/sample-app/ --name=jhipster pgr/jhipster-docker yo jhipster --inforce --no-insight ; sleep 120
 script:
-  # - docker logs jhipster
+  - docker logs jhipster
   - ls -al
   - echo $TRAVIS_BUILD_DIR
   - ls -al $TRAVIS_BUILD_DIR/sample-app/
+  
