--- a/.travis.yml
+++ b/.travis.yml
@@ -7,42 +7,30 @@ before_install:
   - sudo service docker restart ; sleep 10
   - jdk_switcher use oraclejdk8
 install:
-  # - npm install -g yo
-  # - npm install -g bower
-  # - npm install -g grunt-cli
-  # - npm install -g gulp
-  # - npm install -g generator-jhipster@2.21.1
-  # - git clone https://github.com/pascalgrimaud/generator-jhipster.git
-  - git clone https://github.com/pascalgrimaud/jhipster-sample-app.git
-  # - cd generator-jhipster/
-  # - npm link
   # - docker pull mysql
   # - docker pull postgres
-  # - docker pull mongo
+  - docker pull mongo
   # - docker pull cassandra
+  - git clone https://github.com/jhipster/jhipster-sample-app.git
+  - git clone https://github.com/jhipster/jhipster-sample-app-mongodb.git
 script:
-  - cd jhipster-sample-app/
+  #------------------
+  #--- sample-app ---
+  #------------------
+  - cd $TRAVIS_BUILD_DIR/jhipster-sample-app/
   - mvn spring-boot:run &
   - sleep 120
   - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
   - fuser -k 8080/tcp
-  # - docker version
-  # - java -version
-  # - git --version
-  # - yo --version
-  # - mvn -v
-  # - node -v
-  # - npm -v
-  # - bower -v
-  # - grunt --version
-  # - gulp -v
-  # - grunt --version
-  #------------------
-  #--- sample-app ---
-  #------------------
-  # - cd $TRAVIS_BUILD_DIR/sample-app/
-  # - yo jhipster --inforce --no-insight
-  # - mvn spring-boot:run &
-  # - sleep 120
-  # - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
-  # - fuser -k 8080/tcp
+  - sleep 10
+  #--------------------------
+  #--- sample-app-mongodb ---
+  #--------------------------
+  - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-mongodb/
+  - docker run -d -p 27017:27017 mongo
+  - sleep 10
+  - mvn spring-boot:run &
+  - sleep 60
+  - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
+  - fuser -k 8080/tcp
+  - sleep 10
