--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,21 @@ install:
   # - docker pull mysql
   # - docker pull postgres
   - docker pull mongo
-  # - docker pull cassandra
+  - docker pull cassandra
   - git clone https://github.com/jhipster/jhipster-sample-app.git
+  # - git clone https://github.com/jhipster/jhipster-sample-app-gradle.git
+  # - git clone https://github.com/jhipster/jhipster-sample-app-java7.git
+  # - git clone https://github.com/jhipster/jhipster-sample-app-gulp.git
   - git clone https://github.com/jhipster/jhipster-sample-app-mongodb.git
+  - git clone https://github.com/jhipster/jhipster-sample-app-cassandra.git
+  # - git clone https://github.com/jhipster/jhipster-sample-app-dto.git
+  # - git clone https://github.com/jhipster/jhipster-sample-app-elasticsearch.git
+  # - git clone https://github.com/jhipster/jhipster-sample-app-hazelcast.git
+  # - git clone https://github.com/jhipster/jhipster-sample-app-nocache.git
+  # - git clone https://github.com/jhipster/jhipster-sample-app-noi18n.git
+  # - git clone https://github.com/jhipster/jhipster-sample-app-websocket.git
+  # - git clone https://github.com/jhipster/jhipster-sample-app-oauth2.git
+  # - git clone https://github.com/jhipster/jhipster-sample-app-token.git
 script:
   #------------------
   #--- sample-app ---
@@ -34,3 +46,19 @@ script:
   - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
   - fuser -k 8080/tcp
   - sleep 10
+    #----------------------------
+    #--- sample-app-cassandra ---
+    #----------------------------
+    - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-cassandra/
+    - docker run -d --name=cassandra -p 9042:9042 cassandra
+    - sleep 10
+    - cat src/main/resources/config/cql/create-keyspace.cql > create-keyspace-tables.cql
+    - echo "USE sampleCassandra;" >> create-keyspace-tables.cql
+    - cat src/main/resources/config/cql/create-tables.cql >> create-keyspace-tables.cql
+    - docker cp create-keyspace-tables.cql cassandra:/create-keyspace-tables.cql
+    - docker exec -it cassandra cqlsh -f create-keyspace-tables.cql
+    - mvn spring-boot:run &
+    - sleep 60
+    - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
+    - fuser -k 8080/tcp
+    - sleep 10
