--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,13 @@ before_install:
 install:
   # - docker pull mysql
   # - docker pull postgres
-  - docker pull mongo
+  # - docker pull mongo
   - docker pull cassandra
   - git clone https://github.com/jhipster/jhipster-sample-app.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-gradle.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-java7.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-gulp.git
-  - git clone https://github.com/jhipster/jhipster-sample-app-mongodb.git
+  # - git clone https://github.com/jhipster/jhipster-sample-app-mongodb.git
   - git clone https://github.com/jhipster/jhipster-sample-app-cassandra.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-dto.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-elasticsearch.git
@@ -39,14 +39,14 @@ script:
   #--------------------------
   #--- sample-app-mongodb ---
   #--------------------------
-  - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-mongodb/
-  - docker run -d -p 27017:27017 mongo
-  - sleep 10
-  - mvn spring-boot:run &
-  - sleep 60
-  - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
-  - fuser -k 8080/tcp
-  - sleep 10
+  # - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-mongodb/
+  # - docker run -d -p 27017:27017 mongo
+  # - sleep 10
+  # - mvn spring-boot:run &
+  # - sleep 60
+  # - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
+  # - fuser -k 8080/tcp
+  # - sleep 10
     #----------------------------
     #--- sample-app-cassandra ---
     #----------------------------
