--- a/.travis.yml
+++ b/.travis.yml
@@ -55,7 +55,8 @@ script:
   - cat src/main/resources/config/cql/create-keyspace.cql > create-keyspace-tables.cql
   - echo "USE sampleCassandra;" >> create-keyspace-tables.cql
   - cat src/main/resources/config/cql/create-tables.cql >> create-keyspace-tables.cql
-  - docker cp create-keyspace-tables.cql cassandra:/create-keyspace-tables.cql
+  - ls -al
+  - docker cp $TRAVIS_BUILD_DIR/jhipster-sample-app-cassandra/create-keyspace-tables.cql cassandra:/create-keyspace-tables.cql
   - docker exec -it cassandra cqlsh -f create-keyspace-tables.cql
   - mvn spring-boot:run &
   - sleep 60
