--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ script:
   - echo "USE sampleCassandra;" >> create-keyspace-tables.cql
   - cat src/main/resources/config/cql/create-tables.cql >> create-keyspace-tables.cql
   - ls -al
-  - docker cp $TRAVIS_BUILD_DIR/jhipster-sample-app-cassandra/create-keyspace-tables.cql cassandra:/create-keyspace-tables.cql
+  - docker cp $TRAVIS_BUILD_DIR/jhipster-sample-app-cassandra/create-keyspace-tables.cql cassandra:/
   - docker exec -it cassandra cqlsh -f create-keyspace-tables.cql
   - mvn spring-boot:run &
   - sleep 60
