Change order git clone / docker build

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,17 +7,12 @@ before_install:
   - sudo service docker restart ; sleep 10
   - jdk_switcher use oraclejdk8
 install:
-  # - docker pull mysql
-  # - docker pull postgres
-  # - docker pull mongo
-  - docker pull cassandra
-  - docker build -t jhipster-cassandra .
   # - git clone https://github.com/jhipster/jhipster-sample-app.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-gradle.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-java7.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-gulp.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-mongodb.git
-  - git clone https://github.com/jhipster/jhipster-sample-app-cassandra.git
+  # - git clone https://github.com/jhipster/jhipster-sample-app-cassandra.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-dto.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-elasticsearch.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-hazelcast.git
@@ -26,6 +21,11 @@ install:
   # - git clone https://github.com/jhipster/jhipster-sample-app-websocket.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-oauth2.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-token.git
+  # - docker pull mysql
+  # - docker pull postgres
+  # - docker pull mongo
+  - docker pull cassandra
+  - docker build -t jhipster-cassandra .
 script:
   #------------------
   #--- sample-app ---
