--- a/.travis.yml
+++ b/.travis.yml
@@ -52,13 +52,16 @@ script:
   #----------------------------
   - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-cassandra/
   - docker run -d --name=cassandra -p 9042:9042 jhipster-cassandra ; sleep 20
+  - docker ps
   # - cat src/main/resources/config/cql/create-keyspace.cql > create-keyspace-tables.cql
   # - echo "USE sampleCassandra;" >> create-keyspace-tables.cql
   # - cat src/main/resources/config/cql/create-tables.cql >> create-keyspace-tables.cql
   # - ls -al
   # - docker cp $TRAVIS_BUILD_DIR/jhipster-sample-app-cassandra/create-keyspace-tables.cql cassandra:/
-  - docker exec -it cassandra init
+  # - docker exec -it cassandra init
+  # - docker ps
   - docker exec -it cassandra cqlsh -f /create-keyspace-tables.cql
+  - docker ps
   - docker logs cassandra
   - mvn spring-boot:run &
   - sleep 60
