--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,11 @@ before_install:
   - sudo service docker restart ; sleep 10
   - jdk_switcher use oraclejdk8
 install:
-  # - git clone https://github.com/jhipster/jhipster-sample-app.git
+  - git clone https://github.com/jhipster/jhipster-sample-app.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-gradle.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-java7.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-gulp.git
-  # - git clone https://github.com/jhipster/jhipster-sample-app-mongodb.git
+  - git clone https://github.com/jhipster/jhipster-sample-app-mongodb.git
   - git clone https://github.com/jhipster/jhipster-sample-app-cassandra.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-dto.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-elasticsearch.git
@@ -23,46 +23,35 @@ install:
   # - git clone https://github.com/jhipster/jhipster-sample-app-token.git
   # - docker pull mysql
   # - docker pull postgres
-  # - docker pull mongo
+  - docker pull mongo
   - docker pull cassandra
   - docker build -t jhipster-cassandra .
 script:
   #------------------
   #--- sample-app ---
   #------------------
-  # - cd $TRAVIS_BUILD_DIR/jhipster-sample-app/
-  # - mvn spring-boot:run &
-  # - sleep 120
-  # - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
-  # - fuser -k 8080/tcp
-  # - sleep 10
+  - cd $TRAVIS_BUILD_DIR/jhipster-sample-app/
+  - mvn spring-boot:run &
+  - sleep 120
+  - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
+  - fuser -k 8080/tcp
+  - sleep 10
   #--------------------------
   #--- sample-app-mongodb ---
   #--------------------------
-  # - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-mongodb/
-  # - docker run -d -p 27017:27017 mongo
-  # - sleep 10
-  # - mvn spring-boot:run &
-  # - sleep 60
-  # - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
-  # - fuser -k 8080/tcp
-  # - sleep 10
+  - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-mongodb/
+  - docker run -d -p 27017:27017 mongo ; sleep 10
+  - mvn spring-boot:run &
+  - sleep 60
+  - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
+  - fuser -k 8080/tcp
+  - sleep 10
   #----------------------------
   #--- sample-app-cassandra ---
   #----------------------------
   - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-cassandra/
   - docker run -d --name=cassandra -p 9042:9042 jhipster-cassandra ; sleep 20
-  - docker ps
-  # - cat src/main/resources/config/cql/create-keyspace.cql > create-keyspace-tables.cql
-  # - echo "USE sampleCassandra;" >> create-keyspace-tables.cql
-  # - cat src/main/resources/config/cql/create-tables.cql >> create-keyspace-tables.cql
-  # - ls -al
-  # - docker cp $TRAVIS_BUILD_DIR/jhipster-sample-app-cassandra/create-keyspace-tables.cql cassandra:/
-  # - docker exec -it cassandra init
-  # - docker ps
   - docker exec -u root -it cassandra cqlsh -f /create-keyspace-tables.cql
-  - docker ps
-  - docker logs cassandra
   - mvn spring-boot:run &
   - sleep 60
   - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
