--- a/.travis.yml
+++ b/.travis.yml
@@ -50,8 +50,8 @@ script:
   #--- sample-app-cassandra ---
   #----------------------------
   - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-cassandra/
-  - docker run -d --name=cassandra -p 9042:9042 jhipster-cassandra ; sleep 20
-  - docker exec -u root -it cassandra cqlsh -f /create-keyspace-tables.cql
+  - docker run --privileged -d --name=cassandra -p 9042:9042 jhipster-cassandra ; sleep 20
+  - docker exec -it cassandra cqlsh -f /create-keyspace-tables.cql
   # - mvn spring-boot:run &
   # - sleep 60
   # - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
