--- a/.travis.yml
+++ b/.travis.yml
@@ -26,27 +26,30 @@ install:
   - docker pull mongo
   - docker pull cassandra
   - docker build -t jhipster-cassandra .
+  - cd $TRAVIS_BUILD_DIR/jhipster-sample-app/ && mvn install
+  - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-mongodb/ && mvn install
+  - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-cassandra/ && mvn install
 script:
-  #------------------
-  #--- sample-app ---
-  #------------------
+  #---------------------------------------------
+  # jhipster-sample-app
+  #---------------------------------------------
   - cd $TRAVIS_BUILD_DIR/jhipster-sample-app/
   - mvn spring-boot:run &
   - sleep 120
   - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
   - fuser -k 8080/tcp ; sleep 10
-  #--------------------------
-  #--- sample-app-mongodb ---
-  #--------------------------
+  #---------------------------------------------
+  # jhipster-sample-app-mongodb
+  #---------------------------------------------
   - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-mongodb/
   - docker run -d -p 27017:27017 mongo ; sleep 10
   - mvn spring-boot:run &
   - sleep 60
   - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
   - fuser -k 8080/tcp ; sleep 10
-  #----------------------------
-  #--- sample-app-cassandra ---
-  #----------------------------
+  #---------------------------------------------
+  # jhipster-sample-app-cassandra
+  #---------------------------------------------
   - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-cassandra/
   - docker run --privileged -d --name=cassandra -p 9042:9042 jhipster-cassandra ; sleep 20
   - docker exec -it cassandra cqlsh -f /create-keyspace-tables.cql
