--- a/.travis.yml
+++ b/.travis.yml
@@ -65,7 +65,9 @@ script:
   #---------------------------------------------
   - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-cassandra/
   - docker run --privileged -d --name=cassandra -p 9042:9042 jhipster-cassandra ; sleep 20
+  - docker log cassandra
   - docker exec -it cassandra cqlsh -f /create-keyspace-tables.cql
+  - docker log cassandra
   - mvn spring-boot:run &
   - sleep 120
   - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
