--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,11 @@ before_install:
   - sudo service docker restart ; sleep 10
   - jdk_switcher use oraclejdk8
 install:
-  - git clone https://github.com/jhipster/jhipster-sample-app.git
+  # - git clone https://github.com/jhipster/jhipster-sample-app.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-gradle.git
-  - git clone https://github.com/jhipster/jhipster-sample-app-java7.git
+  # - git clone https://github.com/jhipster/jhipster-sample-app-java7.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-gulp.git
-  - git clone https://github.com/jhipster/jhipster-sample-app-mongodb.git
+  # - git clone https://github.com/jhipster/jhipster-sample-app-mongodb.git
   - git clone https://github.com/jhipster/jhipster-sample-app-cassandra.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-dto.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-elasticsearch.git
@@ -31,7 +31,7 @@ install:
   # - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-java7/ && mvn install
   # - jdk_switcher use oraclejdk8
   # - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-mongodb/ && mvn install
-  - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-cassandra/ && mvn install
+  # - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-cassandra/ && mvn install
 script:
   #---------------------------------------------
   # jhipster-sample-app
@@ -65,9 +65,9 @@ script:
   #---------------------------------------------
   - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-cassandra/
   - docker run --privileged -d --name=cassandra -p 9042:9042 jhipster-cassandra ; sleep 20
-  - docker log cassandra
+  - docker logs cassandra
   - docker exec -it cassandra cqlsh -f /create-keyspace-tables.cql
-  - docker log cassandra
+  - docker logs cassandra
   - mvn spring-boot:run &
   - sleep 120
   - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
