--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ before_install:
   - jdk_switcher use oraclejdk8
 install:
   - curl -L https://github.com/docker/compose/releases/download/1.4.2/docker-compose-`uname -s`-`uname -m` > docker-compose
-  - mv docker-compose /usr/local/bin/docker-compose
-  - chmod +x /usr/local/bin/docker-compose
+  - sudo mv docker-compose /usr/local/bin/docker-compose
+  - sudo chmod +x /usr/local/bin/docker-compose
   - docker version
   - docker-compose version
   # - git clone https://github.com/jhipster/jhipster-sample-app.git
